# MSAStats

./: .gitmodules  CMakeLists.txt  setup.py
.github/workflows/: build_wheels.yml
msastats.egg-info/: PKG-INFO  SOURCES.txt
src/: MsaStatsCalculator.cpp  MsaStatsCalculator.h  main.cpp  summary_stats_defs.h
tests/: fasta_file_test.cpp  stats_calc_test.cpp
tests/msas/: dummy_msa.fasta
